# metamath_playground

./: CMakeLists.txt
src/: Expression.h  Metamath_database.cc  Metamath_database.h  Metamath_database_read_write.cc  Metamath_database_read_write.h  Named.cc  Named.h  Proof_step.h  Proof_step_visitor.h  Scope.cc  Scope.h  Statement.cc  Statement.h  Statement_visitors.cc  Statement_visitors.h  Symbol.cc  Symbol.h  Symbol_visitors.cc  Symbol_visitors.h  Tokenizer.cc  Tokenizer.h  main.cc  verify.cc  verify.h
